@@ -1,5 +1,5 @@
 ;; Machine description for IBM RISC System 6000 (POWER) for GNU C compiler
-;; Copyright (C) 1990, 91-98, 1999 Free Software Foundation, Inc.
+;; Copyright (C) 1990, 91-98, 1999, 2000 Free Software Foundation, Inc.
 ;; Contributed by Richard Kenner (kenner@vlsi1.ultra.nyu.edu)
 
 ;; This file is part of GNU CC.
@@ -8013,27 +8013,38 @@
   emit_move_insn (gen_rtx_MEM (Pmode, operands[0]), temp);
   DONE;
 }")
+
+;; TOC register handling.
 
-;; If we have -mminimal-toc, we need to reload r30 after a nonlocal goto.
+;; Code to initialize the PIC register for SVR4 -fpic.
 
-(define_expand "nonlocal_goto_receiver"
-  [(unspec_volatile [(const_int 0)] 1)]
-  "(TARGET_TOC && TARGET_MINIMAL_TOC)
-   || ((DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1)"
+(define_insn "init_v4_pic"
+  [(set (match_operand:SI 0 "register_operand" "=l")
+	(unspec [(const_int 0)] 7))]
+  "DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS"
+  "bl _GLOBAL_OFFSET_TABLE_@local-4"
+  [(set_attr "type" "branch")
+   (set_attr "length" "4")])
+
+;; If the TOC is shared over a translation unit, as in SVR4 -fpic
+;; we need to restore the TOC pointer only when jumping over units
+;; of translation.
+
+(define_expand "builtin_setjmp_receiver"
+  [(use (label_ref (match_operand 0 "" "")))]
+  "(DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1"
   "
 {
-  if ((DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1)
-  {
-    rtx temp = gen_reg_rtx (Pmode);
-    emit_insn (gen_init_v4_pic (temp));
-    emit_move_insn (gen_rtx_REG (Pmode, PIC_OFFSET_TABLE_REGNUM), temp);
-    DONE;
-  }
+  rtx temp = gen_reg_rtx (Pmode);
+  emit_insn (gen_init_v4_pic (temp));
+  emit_move_insn (gen_rtx_REG (Pmode, PIC_OFFSET_TABLE_REGNUM), temp);
+  DONE;
 }")
 
-;; If we have -mminimal-toc, we need to reload r30 after a nonlocal goto.
+;; If the TOC is procedure-specific (as in AIX -mminimal-toc and SVR4 -fPIC),
+;; we must restore it with every nonlocal goto.
 
-(define_insn ""
+(define_insn "nonlocal_goto_receiver"
   [(unspec_volatile [(const_int 0)] 1)]
   "TARGET_TOC && TARGET_MINIMAL_TOC"
   "*
@@ -8611,17 +8622,6 @@
   [(unspec_volatile [(const_int 0)] 0)]
   ""
   "")
-
-;; V.4 specific code to initialize the PIC register
-
-(define_insn "init_v4_pic"
-  [(set (match_operand:SI 0 "register_operand" "=l")
-	(unspec [(const_int 0)] 7))]
-  "DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS"
-  "bl _GLOBAL_OFFSET_TABLE_@local-4"
-  [(set_attr "type" "branch")
-   (set_attr "length" "4")])
-
 
 ;; Compare insns are next.  Note that the RS/6000 has two types of compares,
 ;; signed & unsigned, and one type of branch.
